# StudentsBot

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  constants.py  docker-compose.yml  pyproject.toml  run_in_docker.sh  system_users.py
db/: db.py
docs/: docker.md  security.md
src/students_crm/: provisioner.py
src/students_crm/db/: db.py  migrate.py  models.py  routines.py  schemas.py
src/students_crm/students_bot/: homework.py  homework_formatting.py  homework_keyboards.py  homework_states.py  main.py  registration.py  sync_utils.py
src/students_crm/utilities/: __init__.py  constants.py  security.py  system_users.py  validate.py
src/students_crm/utils/: constants.py  rate_limit.py  security.py  system_users.py  validate.py
src/students_crm/webform/: main.py
src/students_crm/webform/templates/: register.html
students_bot/: main.py  sync_utils.py
tests/: db_unittes.py  db_unittests.py
webform/: __init__.py  main.py
webform/templates/: register.html
