[project]
name = "students-crm"
version = "0.1.0"
description = "Telegram and FastAPI workflow for managing student registration and homework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.3",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-async>=0.1.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
